# presentations

./: .gitignore
fosdem2020-hawktracer/: CMakeLists.txt  commands.sh
fosdem2020-hawktracer/backup/: hello-world.htdump  rotate.htdump  rotate.html  rotate.json  time-measurement-python.htdump  time-measurement-python.json  time-measurement.htdump  time-measurement.html  time-measurement.json
fosdem2020-hawktracer/hello_world/: CMakeLists.txt  main.c
fosdem2020-hawktracer/presentation/: CMakeLists.txt  hawktracer.tex
fosdem2020-hawktracer/presentation/img/: images.odp
fosdem2020-hawktracer/resource_usage/: CMakeLists.txt  client.py  main.c
fosdem2020-hawktracer/rotate/: CMakeLists.txt  Cargo.toml  build.rs  downloader.c  rotate.py
fosdem2020-hawktracer/rotate/src/: main.rs
fosdem2020-hawktracer/time_measurement/: CMakeLists.txt  main.cpp  time-measurement.py
